# IGVC2023-src

./: README.md  setup.sh
.github/workflows/: formatter.yml
ZLAC8015D_python/examples/: ZLAC8015D.py  test_speed_control.py
ZLAC8015D_python/zlac8015d/: ZLAC8015D.py
catkin_simple/: package.xml
fast_gicp/pygicp.egg-info/: SOURCES.txt
firmware/: IGVC_navigation_v3.ino  estop_xiao_reset_navboolv5.ino
hdl_global_localization/config/: bbs_config.yaml
hdl_localization/rviz/: hdl_localization.rviz
igvc2022/: CMakeLists.txt  package.xml  readme.txt
igvc2022/config/: gps_parameters.yaml
igvc2022/config/gps_waypoints/: gps_waypoints_simulation_reverse.yaml
igvc2022/launch/: camera_calib.launch  no_map_navigation.launch  qualification_teleop.launch  qualification_waypoint.launch  segmentation.launch  simulation.launch  start.launch
igvc2022/src/: LED_control.py  camera_init.py  get_waypoints_from_gps.py  gps_goal_setter.py  gps_goal_setter2.py  local_goal_setter.py  local_goal_setter2.py  local_goal_setter3.py  marker_setter.py  qualification_gps_goal_setter.py  ramp_detect.py
igvc2023/: CMakeLists.txt  package.xml
igvc2023/config/: ekf.yaml  gps_parameters.yaml  navsatekf.yaml  segmentation_params.yaml
igvc2023/config/gps_waypoints/: gps_waypoints.yaml  gps_waypoints_north.yaml  gps_waypoints_simulation.yaml  gps_waypoints_simulation_reverse.yaml  gps_waypoints_south.yaml
igvc2023/launch/: IGVCsimulation.launch  buildmap_teleop_joy.launch  no_map_navigation.launch  qualification_motor.launch  segmentation.launch  sensors.launch  start.launch  start_sim.launch  test.launch  waypoint_navigation.launch  waypoint_navigation_multi.launch
igvc2023/maps/nakaniwa/: mymap_nakaniwa_2.yaml
igvc2023/meshes/: IGVCchassis.dae
igvc2023/models/barricade/: model.sdf
igvc2023/models/course/: model.sdf
igvc2023/models/course_v2/: model.sdf
igvc2023/models/hoseicourse/: model.sdf
igvc2023/models/ramp/: model.sdf
igvc2023/params/: base_local_planner_params.yaml  foot_print.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  pointcloud_to_laserscan_params.yaml  voxel_costmap_params.yaml
igvc2023/rviz_cfg/: y.rviz
igvc2023/scripts/: LED_control.py  disp_lat_long.py  get_waypoints_from_gps.py  gps_goal_setter2.py  local_goal_setter2.py  marker_setter.py  ramp_detect.py  waypoints_nav_igvc2023.cpp  wit_normal_ros.py
igvc2023/urdf/: orange.gazebo  orange.xacro  orange2022.xacro
igvc2023/urdf/sensors/: camera.urdf.xacro  gps.urdf.xacro  hokuyo.urdf.xacro  imu.urdf.xacro  velodyne.urdf.xacro
igvc2023/world/: course_v2.world
ira_laser_tools/: package.xml
ira_laser_tools/src/: laserscan_multi_merger.cpp  laserscan_virtualizer.cpp
line_detection/: CMakeLists.txt  package.xml
line_detection/cfg/: reconfig.cfg
line_detection/launch/: igvc2022_line_detection.launch
line_detection/rviz_cfg/: x.rviz
line_detection/src/: conv_to_rtheta.csv  imInit_igvc2022.py  imRtheta_igvc2022.cpp  init_camera_property.sh  line_detect.cpp  rtheta2scan_igvc2022.cpp
line_detection_vlp16/: CMakeLists.txt  README.md  package.xml
line_detection_vlp16/cfg/: reconfig.cfg
line_detection_vlp16/launch/: line_detection.launch
line_detection_vlp16/param/: line_detection_params.yaml
line_detection_vlp16/rviz/: rviz_cfg.rviz
line_detection_vlp16/scripts/: fake_intensity_pcd.py  lane_follower.py  line_detection.py  pcd_tools.py
linefit_ground_segmentation/linefit_ground_segmentation/: package.xml
linefit_ground_segmentation/linefit_ground_segmentation_ros/: package.xml
multi_map_manager/: package.xml
multi_map_manager/apps/: map_merger.py  map_trimmer.py
navigation/amcl/: package.xml
navigation/base_local_planner/: blp_plugin.xml  package.xml  setup.py
navigation/carrot_planner/: bgp_plugin.xml  package.xml
navigation/clear_costmap_recovery/: ccr_plugin.xml  package.xml
navigation/costmap_2d/: costmap_plugins.xml  package.xml
navigation/dwa_local_planner/: blp_plugin.xml  package.xml
navigation/fake_localization/: fake_localization.cpp  package.xml  static_odom_broadcaster.py
navigation/global_planner/: bgp_plugin.xml  package.xml
navigation/map_server/: package.xml
navigation/move_base/: package.xml  planner_test.xml
navigation/move_slow_and_clear/: package.xml  recovery_plugin.xml
navigation/nav_core/: package.xml
navigation/navfn/: bgp_plugin.xml  package.xml
navigation/navigation/: package.xml
navigation/rotate_recovery/: package.xml  rotate_plugin.xml
navigation/voxel_grid/: package.xml
openslam_gmapping/: package.xml
openslam_gmapping/carmenwrapper/: carmenwrapper.cpp
openslam_gmapping/configfile/: configfile.cpp  configfile_test.cpp
openslam_gmapping/gfs-carmen/: gfs-carmen.cpp
openslam_gmapping/grid/: graphmap.cpp  map_test.cpp
openslam_gmapping/gridfastslam/: gfs2log.cpp  gfs2rec.cpp  gfs2stat.cpp  gfs2stream.cpp  gfsreader.cpp  gridslamprocessor.cpp  gridslamprocessor_tree.cpp  motionmodel.cpp
openslam_gmapping/gui/: gfs2img.cpp  gfs_logplayer.cpp  gfs_nogui.cpp  gfs_simplegui.cpp  gsp_thread.cpp  qgraphpainter.cpp  qmappainter.cpp  qnavigatorwidget.cpp  qparticleviewer.cpp  qpixmapdumper.cpp  qslamandnavwidget.cpp
openslam_gmapping/log/: carmenconfiguration.cpp  configuration.cpp  log_plot.cpp  log_test.cpp  rdk2carmen.cpp  scanstudio2carmen.cpp  sensorlog.cpp  sensorstream.cpp
openslam_gmapping/particlefilter/: particlefilter.cpp  particlefilter_test.cpp  range_bearing.cpp
openslam_gmapping/scanmatcher/: eig3.cpp  icptest.cpp  scanmatch_test.cpp  scanmatcher.cpp  scanmatcher.new.cpp  scanmatcherprocessor.cpp  smmap.cpp
orange_mapping/: README.md  setup.sh
orange_mapping/orange_mapping/: CMakeLists.txt  package.xml
orange_mapping/orange_mapping/config/: lio_sam_params.yaml
orange_mapping/orange_mapping/launch/: lio_sam_slam.launch
pointcloud_to_laserscan/: package.xml
waypoint_navigation/: README.md
wit_ros_imu/: package.xml
wit_ros_imu/launch/: rviz_and_imu.launch
wit_ros_imu/scripts/: wit_normal_ros.py
zlac8015d_ros/: package.xml
(+460 files in other folders)
