<?xml version="1.0"?>
<package format="2">
  <name>igvc2023</name>
  <version>0.0.1</version>
  <description>The igvc2023 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/igvc2023</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>gazebo</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
<exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>robot_pose_ekf</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>ruamel.yaml</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <test_depend>roslint</test_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/world"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
