<?xml version="1.0"?>
<package>
  <name>wit_ros_imu</name>
  <version>1.0.1</version>
  <description>The ros_imu package</description>

  <maintainer email="yahboom@todo.todo">yahboom</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
