<?xml version="1.0"?>
<package format="2">
  <name>orange_mapping</name>
  <version>0.0.0</version>
  <description>The orange_mapping package</description>
  <maintainer email="KBKN@todo.todo">ubuntu</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tsukuba2022</exec_depend>
  <exec_depend>lio_sam</exec_depend>
  <exec_depend>robot_localization</exec_depend>
</package>
